2009-07-22  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (SPLI_REF_LISTS): remove type_accessor argument
	(gar_col_normal): use new definition

2009-07-16  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (REGEXP-EXEC): pre-allocate #()
	(rettype_t, CHECK_RETTYPE): add
	(REGEXP-EXEC): remove "default: NOTREACHED;" from switch(rettype)

2009-07-14  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*expected-failures*): drop PRINT-LEVEL.8,
	PRINT-LEVEL.9 because I fixed them in the sources

2009-07-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (modcheck): add shell function to unify
	base-mod-check & full-mod-check target generation

2009-07-12  Reini Urban  <rurban@x-ray.at>

        * makemake.in (full-mod-check): add
	(mod-check): depend on it

2009-07-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (TEXT, LEXE, SHREXT): ${host_os} is "mingw32" on
	msys/mingw, so fix the 2009-07-01 breakage
	(DEVPREFIX): only define on cygwin

2009-07-14  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp (PQexecParams, PQprepare)
	(PQexecPrepared, PQsendQueryParams, PQsendPrepare)
	(PQsendQueryPrepared, PQfn, PQescapeByteaConn):
	use C-ARRAY-PTR instead of C-ARRAY-MAX for :IN parameters
	Suggested by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>
	Reported by SOS Sukaeto <sukaeto@gmail.com>

2009-07-13  Sam Steingold  <sds@gnu.org>

	* zthread.d (MUTEX-NAME, EXEMPTION-NAME): add
	(check_name_arg): add; use instead of test_stringsymchar_arg to
	allow any names (strings, symbols, integers &c)
	* constsym.d, subr.d (mutex_name, exemption_name): add
	* threads.lisp (MUTEX-NAME, EXEMPTION-NAME): export
	* constobj.d (type_name_arg): add

2009-07-13  Sam Steingold  <sds@gnu.org>

	* constobj.d (printstring_inactive, printstring_recursive): add
	* io.d (pr_unreadably_with_prefix): rename from pr_unreadably and
	accept an optional prefix to print before string
	(pr_unreadably): define using pr_unreadably_with_prefix