@@ -657,9 +657,11 @@ global maygc object I_I_ash_I (object x, object y)
    badamount:
     RESTORE_NUM_STACK /* restore num_stack */
     pushSTACK(S(ash));          /* slot :OPERATION */
+    pushSTACK(y);               /* save for the error message */
     pushSTACK(x); pushSTACK(y);
-    { object tmp = listof(2); pushSTACK(tmp); } /* slot :OPERANDS */
-    pushSTACK(y); pushSTACK(S(ash));
+    { object tmp = listof(2);
+      pushSTACK(STACK_0/*y*/); STACK_1 = tmp; } /* slot :OPERANDS */
+    pushSTACK(S(ash));
     error(arithmetic_error,GETTEXT("~S: shift ~S is too large"));
   }
 }
