@@ -1,3 +1,7 @@
+2009-07-22  Sam Steingold  <sds@gnu.org>
+
+	* intlog.d (I_I_ash_I): fix a GC-safety bug
+
 2009-07-22  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	* spvw_garcol.d (SPLI_REF_LISTS): remove type_accessor argument
